@@ -9,6 +9,7 @@ Changes
 - sub-command "list" option "--deps", show list of file dependencies
 - select task by wildcard (fnmatch) i.e. test:folderXXX/*
 - task-setup can be another task
+- task property "teardown" substitute of setup-objects cleanup
 
 0.7.0 (*2010-04-08*)
 =====================
